--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,8 @@ jobs:
       run: npm install
 
     - name: Build React App
-      run: npm run build
+      run: npm run build -- --base=/b/
+      #run: npm run build
 
     - name: Setup SSH
       run: |
