--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
 
     - name: Build React App
       run: npm run build -- --base=/dfs-viz/
-      #run: npm run build
+      # if no base url use: run: npm run build
 
     - name: Setup SSH
       run: |
